src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  /* line-height: 1.5;
  font-weight: 400; */

  /* color-scheme: light dark; */
  /* color: rgba(255, 255, 255, 0.87);
  background-color: #242424; */

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  min-height: 100vh;
}
/* 
a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
} */
/* 
button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
} */

/* @media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
} */

@layer base {
   @media (prefers-color-scheme: light) {
    :root {
      --accent: hsl(231, 99%, 62%);
      --background: hsl(248, 100%, 92%);
      --background-secondary: hsl(249, 100%, 96%); 
      --background-tertiary:  hsl(0, 0%, 100%);
      --green: hsl(177, 52%, 45%);
      --orange: hsl(21, 99%, 62%);
      --pink: hsl(321, 99%, 62%);
      --purple: hsl(261, 99%, 62%);
      --red: hsl(351, 99%, 62%);
      --yellow: hsl(51, 99%, 62%);
      --blue: hsl(231, 99%, 62%);
      --gradient-primary: hsl(240, 100%, 74%);

      /* --background: 0 0% 100%; */
      --foreground: hsl(222.2, 84%, 4.9%);
      --card: hsl(249, 100%, 96%);
      --card-foreground: hsl(222.2, 84%, 4.9%);
      --popover: hsl(0, 0%, 100%);
      --popover-foreground: hsl(222.2, 84%, 4.9%);
      --primary: hsl(231, 99%, 62%);
      --primary-foreground: hsl(210, 40%, 98%);
      --secondary: hsl(210, 40%, 96.1%);
      --secondary-foreground: hsl(222.2, 47.4%, 11.2%);
      --muted: hsl(210, 40%, 96.1%);
      --muted-foreground: hsl(215.4, 16.3%, 46.9%);
      --accent-foreground: hsl(222.2, 47.4%, 11.2%);
      --destructive: hsl(351, 99%, 62%);
      --destructive-foreground: hsl(210, 40%, 98%);
      --border: hsl(0, 0%, 100%);
      --border-light: hsl(0, 0%, 100%);
      --input: hsl(214.3, 31.8%, 91.4%);
      --ring: hsl(221.2, 83.2%, 53.3%);
      --radius: 0.75rem;
      --chart-1: hsl(12, 76%, 61%);
      --chart-2: hsl(173, 58%, 39%);
      --chart-3: hsl(197, 37%, 24%);
      --chart-4: hsl(43, 74%, 66%);
      --chart-5: hsl(27, 87%, 67%);
      --sidebar-background: hsl(0, 0%, 98%);
      --sidebar-foreground: hsl(240, 5.3%, 26.1%);
      --sidebar-primary: hsl(240, 5.9%, 10%);
      --sidebar-primary-foreground: hsl(0, 0%, 98%);
      --sidebar-accent: hsl(0, 0%, 100%);
      --sidebar-accent-foreground: hsl(240, 5.9%, 10%);
      --sidebar-border: hsl(220, 13%, 91%);
      --sidebar-ring: hsl(217.2, 91.2%, 59.8%);
    }
  
 
  }
   @media (prefers-color-scheme: dark) {
    :root {
      /* --background: 222.2 84% 4.9%; */
      --foreground: hsl(210, 40%, 98%);
      --card: hsl(242, 36%, 15%);
      --card-foreground: hsl(210, 40%, 98%);
      --popover: hsl(222.2, 84%, 4.9%);
      --popover-foreground: hsl(210, 40%, 98%);
      --primary: hsl(236, 49%, 35%);
      --primary-foreground: hsl(210, 40%, 98%);
      --secondary: hsl(217.2, 32.6%, 17.5%);
      --secondary-foreground: hsl(210, 40%, 98%);
      --muted: hsl(217.2, 32.6%, 17.5%);
      --muted-foreground: hsl(218, 15%, 75%);
      /* --accent: 217.2 32.6% 17.5%; */
      --accent-foreground: hsl(210, 40%, 98%);
      --destructive: hsl(0, 62.8%, 30.6%);
      --destructive-foreground: hsl(210, 40%, 98%);
      --border: hsl(240, 41%, 22%);
      --border-light: hsl(0, 0%, 100%, .61);
      --input: hsl(217.2, 32.6%, 17.5%);
      --ring: hsl(224.3, 76.3%, 48%);
      --radius: 0.75rem;
      --chart-1: hsl(220, 70%, 50%);
      --chart-2: hsl(160, 60%, 45%);
      --chart-3: hsl(30, 80%, 55%);
      --chart-4: hsl(280, 65%, 60%);
      --chart-5: hsl(340, 75%, 55%);
      --sidebar-background: hsl(240, 5.9%, 10%);
      --sidebar-foreground: hsl(240, 4.8%, 95.9%);
      --sidebar-primary: hsl(224.3, 76.3%, 48%);
      --sidebar-primary-foreground: hsl(0, 0%, 100%);
      --sidebar-accent: hsl(240, 41%, 22%);
      --sidebar-accent-foreground: hsl(240, 4.8%, 95.9%);
      --sidebar-border: hsl(240, 41%, 22%);
      --sidebar-ring: hsl(217.2, 91.2%, 59.8%);

      --accent: hsl(236, 49%, 35%);
      --background: hsl(252, 33%, 9%);
      --background-secondary: hsl(242, 36%, 15%); 
      --background-tertiary:  hsl(240, 41%, 22%);
      --green: hsl(141, 99%, 62%);
      --orange: hsl(21, 99%, 62%);
      --pink: hsl(321, 99%, 62%);
      --purple: hsl(261, 99%, 62%);
      --red: hsl(351, 99%, 62%);
      --yellow: hsl(51, 99%, 62%);
      --blue: hsl(231, 99%, 62%);
      --gradient-primary: hsl(236, 49%, 35%);
    }
  
  }
}

@layer base {
  * {
    @apply border-border;
  }
  html, body {
    @apply bg-background-secondary text-foreground;
    height: 100%;
    margin: 0;
    padding: 0;
    overflow: hidden;
    height: 100vh;  /* standard definition (as fallback) */
    height: 100dvh; /* dynamic vh will make the trick on iOS */
  }
}

